<resources>

    <string name="app_name">HighFive</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">HighFive</string>
    <string name="welcome">Welcome to doodle world!</string>
    <string name="doodle">Doodle</string>
    <string name="shake">Shake</string>
    <string name="title_activity_doodle">Doodle</string>
    <string name="title_activity_shake">Shake</string>
    <string name="title_activity_multi_chooser">Multi Image Chooser</string>
    <string name="multi_app_name">MultiImageChooser</string>
    <string name="free_version_label">Images left: %d</string>
    <string name="error_database">There was an error opening the images database. Please report the problem.</string>
    <string name="requesting_thumbnails">Requesting thumbnails, please be patient</string>
    <string name="message_saved">Your image has been saved to the gallery</string>
    <string name="message_error_saving">Error happens!</string>
    <string name="button_set_line_width">Set Line Width</string>
    <string name="pencil_button_text">Pencil</string>
    <string name="emboss_button_text">Emboss</string>
    <string name="blur_button_text">Blur</string>
    <string name="src_button_text">SrcATop</string>
    <string name="button_share_to_fb">Share to Facebook</string>
    <string name="to_share_page_button">Yes</string>
    <string name="cancel_to_share_page_button">No</string>
    <string name="to_share_txt">Do you want to share your image to Facebook?</string>
    <string name="title_activity_share">Share to Facebook</string>
    <string name="camera_dialog_txt">Which photo do you want to doodle on?</string>
    <string name="gallery_button_txt">From Gallery</string>
    <string name="camera_button_txt">Take a picture</string>
    <string name="blank_button_txt">Blank Canvas</string>
    <string name="homeButtonTxt">Home</string>
    <string name="message_erase">Do you want to clear the canvas?</string>
    <string name="button_erase">Erase</string>
    <string name="button_cancel">Cancel</string>
    <string name="message_share">Your image has been saved to gallery. Do you want to share it to Facebook?</string>
    <string name="share_msg">Share this moment with your friend</string>
    <string name="shareCaption">Image caption :</string>
    <string name="captionHint">Title your photo here</string>
    
    

</resources>