<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/camera_dialog_txt" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/gallery_button_txt" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/galleryButton"
        android:layout_below="@id/galleryButton"
        android:layout_marginTop="20dp"
        android:text="@string/camera_button_txt" />

    <Button
        android:id="@+id/blankButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/galleryButton"
        android:layout_below="@id/cameraButton"
        android:layout_marginTop="20dp"
        android:text="@string/blank_button_txt" />

</RelativeLayout>