<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<TableLayout android:id="@+id/tableLayout"
      android:layout_width="match_parent" 
      android:layout_height="wrap_content" android:layout_margin="10dp"
      android:stretchColumns="1"
      android:paddingLeft="30dp"
      android:paddingRight="30dp">
		<TableRow android:orientation="horizontal"
         	android:layout_width="match_parent" 
         	android:layout_height="wrap_content"
         	android:paddingBottom="8dp">
			<Button
			    android:id="@+id/pencilButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/pencil_button_text"
			    android:layout_weight="1" />
		</TableRow>
		<TableRow android:orientation="horizontal"
         	android:layout_width="match_parent" 
         	android:layout_height="wrap_content"
         	android:paddingBottom="8dp">
			<Button
			    android:id="@+id/embossButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/emboss_button_text"
			    android:layout_weight="1" />
		</TableRow>
		<TableRow android:orientation="horizontal"
         	android:layout_width="match_parent" 
         	android:layout_height="wrap_content"
         	android:paddingBottom="8dp">
			<Button
			    android:id="@+id/blurButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/blur_button_text"
			    android:layout_weight="1" />
		</TableRow>
		
	    
	</TableLayout>
</LinearLayout>